Fix auto zoom on input on mobile issue

--- a/src/global.css
+++ b/src/global.css
@@ -26,3 +26,25 @@ body {
 a {
   text-decoration: none;
 }
+
+/* 모바일에서 font-size 16px 이상이면 input 에 auto zoom 되지 않음*/
+@media only screen and (max-width: 767px) {
+  input[type='color'],
+  input[type='date'],
+  input[type='datetime'],
+  input[type='datetime-local'],
+  input[type='email'],
+  input[type='month'],
+  input[type='number'],
+  input[type='password'],
+  input[type='search'],
+  input[type='tel'],
+  input[type='text'],
+  input[type='time'],
+  input[type='url'],
+  input[type='week'],
+  select:focus,
+  textarea {
+    font-size: 16px;
+  }
+}
